# Praychain

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/workflows/: CICD.yml  cd.yml  ci.yml
.postman/: apis.json
backend/: .dockerignore  .env.spec  .gitignore  Dockerfile  main.py  pyproject.toml
backend/src/: config.py
backend/src/abi/: pray_token.json
backend/src/config/: settings.py
backend/src/data/: __init__.py  bible_structure.py  prayers.py  quotes.py
backend/src/models/: __init__.py  analysis.py  charity.py  donation.py  prayer.py  schemas.py  token.py  transcription.py  user.py
backend/src/routers/: analysis.py  base.py  bible.py  charity.py  prayer.py  tokens.py  transcription.py  users.py
backend/src/utils/: bible_api.py  celo.py  mongodb.py  voice_verification.py
mobile/: .env.spec  app.json  eas.json  entrypoint.js  metro.config.js  package-lock.json  package.json  polyfills.ts  tsconfig.json
mobile/app/: TermsAndConditions.tsx  _layout.tsx  bible-reader.tsx  daily-reading.tsx  login.tsx  profile.tsx  quote.tsx  random-quote.tsx  scripture.tsx  settings.tsx
mobile/app/(tabs)/: _layout.tsx  achievements.tsx  community.tsx  index.tsx  prayer.tsx  three.tsx  tokens.tsx  two.tsx
mobile/components/icons/: Cross.tsx
mobile/config/: api.ts  blockchain.ts  currentUser.ts
mobile/contexts/: AuthContext.tsx  LanguageContext.tsx  UserDataContext.tsx
mobile/hooks/: useAchievements.ts  useBible.ts  useCharity.ts  useCommunity.ts  usePrayerRecording.ts  useSettings.ts  useTokens.ts  useUserData.ts  useWeb3.ts
mobile/locales/: en.ts  es.ts  pl.ts
nginx/: .dockerignore  Dockerfile  nginx.conf
terraform/: main.tf  variables.tf
terraform/tools/: bible-proxy.js  push-to-ecr.sh
voice-service/: .dockerignore  Dockerfile  main.py  pyproject.toml
