[tool.poetry]
name = "praychain-backend"
version = "2.0.0"
description = "Prayer chain with AI fraud detection"
authors = ["Praychain Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
motor = "^3.3.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
protobuf = ">=4.21.0"
web3 = "^7.14.0"
eth-account = "^0.13.7"
faster-whisper = "^1.0.0" 
requests = "^2.31.0"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"