[tool.poetry]
name = "voice-service"
version = "0.1.0"
description = "Voice verification service using Resemblyzer"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
resemblyzer = "^0.1.1.dev0"  # Ensure this doesn't pull GPU dependencies
numpy = "^1.24.0"
scipy = "^1.11.0"
librosa = "^0.10.0"
soundfile = "^0.12.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"